fix project photos top and left alignment

--- a/css/responsive/laptop.styl
+++ b/css/responsive/laptop.styl
@@ -79,8 +79,8 @@ $footer-height = 80px
   &.hide
     display: none
     
-.single-project-photos
-  padding-left: $margin-basic
+/*.single-project-photos
+  padding-left: $margin-basic*/
       
 .project-text-title 
   display: block
