--- a/css/responsive/monitor.styl
+++ b/css/responsive/monitor.styl
@@ -35,8 +35,8 @@ $footer-height = 81px
   padding-bottom: $footer-height
   padding-right: $margin-basic
   
-.single-project-photos
-  padding-left: $margin-basic
+/*.single-project-photos
+  padding-left: $margin-basic*/ 
   
 .swiper-container
   margin-top: $header-height + $margin-basic
@@ -44,6 +44,17 @@ $footer-height = 81px
 .project-photos-container
   height: calc('100vh - ' ($header-height + $footer-height + ($margin-basic * 2)))
   
+// ******************************************************
+
+// ARCHIVE PROJECT
+  
+.archive-photos-container
+  margin-top: $margin-basic
+  
+.archive-project-title
+  text-indent: -($margin-small)
+  margin-left: $margin-small
+
 // ******************************************************
 
 // INDEX
